--- a/src/Aiursoft.CorpHome/Views/Shared/Components/MarketingFooter/Default.cshtml
+++ b/src/Aiursoft.CorpHome/Views/Shared/Components/MarketingFooter/Default.cshtml
@@ -63,6 +63,12 @@
                     <li class="mt-2">
                         <a href="https://github.com/aiursoftweb/template/blob/main/LICENSE" class="text-white-50">@Localizer["Licence"]</a>
                     </li>
+                    <li class="mt-2">
+                        <a asp-controller="Home" asp-action="Terms" class="text-white-50">@Localizer["Terms of Service"]</a>
+                    </li>
+                    <li class="mt-2">
+                        <a asp-controller="Home" asp-action="Privacy" class="text-white-50">@Localizer["Privacy Policy"]</a>
+                    </li>
                 </ul>
             </div>
             <div class="col-12 col-md-4 col-lg-2 mb-3 mb-md-0">
